--- a/admin-web/package.json
+++ b/admin-web/package.json
@@ -25,6 +25,8 @@
   },
   "dependencies": {
     "@arco-themes/vue-dev-frank": "^0.0.15",
+    "@wangeditor/editor": "^5.1.23",
+    "@wangeditor/editor-for-vue": "^5.1.12",
     "@vueuse/core": "^7.7.1",
     "axios": "^0.27.2",
     "js-cookie": "^2.2.0",
