--- a/server-api/composer.json
+++ b/server-api/composer.json
@@ -36,7 +36,8 @@
     "spatie/macroable": "^1.0",
     "myclabs/php-enum": "^1.8",
     "topthink/think-migration": "^3.1",
-    "topthink/think-swoole": "^4.0"
+    "topthink/think-swoole": "^4.0",
+    "topthink/think-queue": "*"
   },
   "require-dev": {
     "symfony/var-dumper": ">=4.2",
