--- a/server-api/composer.json
+++ b/server-api/composer.json
@@ -28,6 +28,7 @@
     "ext-bcmath": "*",
     "ext-gd": "*",
     "ext-openssl": "*",
+    "ext-swoole": "*",
     "ext-dom": "*",
     "ext-simplexml": "*",
     "ext-libxml": "*",
