--- a/server-api/composer.json
+++ b/server-api/composer.json
@@ -37,9 +37,7 @@
     "spatie/macroable": "^1.0",
     "myclabs/php-enum": "^1.8",
     "topthink/think-migration": "^3.1",
-    "topthink/think-queue": "*",
-    "zoujingli/ip2region": "^2.0",
-    "itbdw/ip-database": "^2.0"
+    "topthink/think-queue": "*"
   },
   "require-dev": {
     "symfony/var-dumper": ">=4.2",
