--- a/server-api/composer.json
+++ b/server-api/composer.json
@@ -38,7 +38,9 @@
     "topthink/think-migration": "^3.1",
     "topthink/think-queue": "*",
     "zoujingli/ip2region": "^2.0",
-    "itbdw/ip-database": "^2.0"
+    "itbdw/ip-database": "^2.0",
+    "phpmailer/phpmailer": "^6.9",
+    "guzzlehttp/guzzle": "^7.9"
   },
   "require-dev": {
     "symfony/var-dumper": ">=4.2",
